# CVEN5393

./: .gitignore  Des_Moines_River_flow.xls  README.md  VENV_WORKFLOW.md  epsilon_nondominance_from_file.ipynb  flood-control-multiobjective-cost-benefit.ipynb  lp-squandering-resources-Zeleny-1981.ipynb  pyproject.toml  questions_draft.json  requirements.txt  scalar-uncertainties.ipynb  setup.cfg  streamflow_index-sequential.ipynb  streamflow_nowak.ipynb
.claude/commands/: add-question.md  audit-questions.md
.devcontainer/: devcontainer.json
Analytic Hierarchy Process/: README.md  ahp_examples.R  mcda_examples.R  requirements.txt  waterCost.yaml
Analytic Hierarchy Process/example_problem_yaml_files/: lunch.yaml
AnalyticHierarchyProcess/: README.md  app.py
Colab Notebooks/: epsilon-nondominance_CRB-example.ipynb  epsilon-nondominance_generic-example.ipynb  flood-control-multiobjective-cost-benefit.ipynb  lp-squandering-resources-Zeleny-1981.ipynb  mass-curve-performance_workbook.ipynb  moea-optimization.ipynb  res-rule-curve_complete.ipynb  scalar-uncertainties.ipynb  streamflow_index-sequential.ipynb  streamflow_nowak.ipynb  streamflow_nowak_parasolpy.ipynb
Data/: oak_creek_monthly_af.xlsx
RiverWare Example Models/: performance_global_functions.gfs  reservoir_functions.gfs
Training/: GIT_CHEATSHEET.md  git-github-lecture-notes.md  javascript_defaults-js-vs-json.md  lecture_cdn_and_data_distribution.md  python_venvs_demystified.md
archived/: requirements.txt  setup.cfg
cvtools/: __init__.py
exam_prep/: 5393.sp26.exam2.review.json
scripts/: tag-release.sh
(+50 files in other folders)
