[tool.poetry]
name = "CVEN5393-tools"
version = "0.1.4"
description = "Shared utilities for the CVEN5393 workspace"
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
streamlit = ">=1.32.0"
ahpy = ">=1.2.0"
pyyaml = ">=6.0"
pandas = ">=2.0.0"
numpy = ">=1.24.0"
matplotlib = ">=3.7.0"
scipy = ">=1.10.0"
plotly = ">=5.15.0"
promptukit = ">=0.1.550"
ipywidgets = ">=8.0.0"

notebook = "^6.5.0"

[[tool.poetry.packages]]
include = "cvtools"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
