[metadata]
name = CVEN5393-tools
version = 0.1.0
description = Shared utilities for the CVEN5393 workspace
license = MIT

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires =
    streamlit>=1.32.0
    ahpy>=1.2.0
    pyyaml>=6.0
    pandas>=2.0.0
    numpy>=1.24.0
    matplotlib>=3.7.0
    scipy>=1.10.0
    plotly>=5.15.0

[options.packages.find]
where = .
